Fix off-centre container padding

--- a/src/styles/_responsive-container.scss
+++ b/src/styles/_responsive-container.scss
@@ -1,6 +1,8 @@
 .container {
     margin: auto;
     padding: 10px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 @media (min-width: 576px) {
